[package]
name = "viaems"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_cbor = "0.11.2"
serde = {version = "*", features = ["derive"]}
sqlite = {version = "*", features = ["bundled"]}
clap = { version = "4.4.12", features = ["derive"] }
ctrlc = "3.4.2"
rusb = "0.9.3"

[profile.release]
lto = true
